test/error/parse/ExpectEqual.mod
MODULE ExpectEqual;
CONST x 1;
END ExpectEqual.
